Fixed characters overlap, fixed music, refactoring and clean code, change display system of characters. TODO change display system of zombies

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
 @font-face {
   font-family: VT220;
   font-style: normal;
-  font-weight: medium;
   src: url("fonts/Glass_TTY_VT220.ttf");
 }
 
-
 body {
-  font-family: 'VT220';
+  font-family: 'VT220', sans-serif;
   color:red;
   background-color: black;
   background-image: url('images/BG.png');
@@ -15,17 +13,16 @@ body {
 }
 
 #board {
+  position: relative;
   border-radius: 3px;
   border: 2px solid #101010;
   background-image: url('images/FLOOR.png');
   background-repeat: repeat;
-  background-color: grey;
   width: 960px;
   height: 640px;
   margin:auto;
   box-shadow: 10px 10px 5px #110101;
   border-top: 4px solid #101010;
-
 }
 
 .tile {
@@ -34,11 +31,6 @@ body {
   position: relative;
   width: 32px;
   height: 32px;
-  background-color: black;
-}
-
-.currentTile {
-  background-color: red;
 }
 
 .empty {
@@ -51,99 +43,39 @@ body {
 }
 
 .zombie {
-  display:inline-block;
+  margin: 0px;
   float:left;
-  position: relative;
+  position: absolute;
   width: 32px;
   height: 32px;
 }
 
-.zombie-left {
-  background-image: url('images/ZW.png');
-}
-.zombie-right {
-  background-image: url('images/ZE.png');
-}
-.zombie-up {
-  background-image: url('images/ZN.png');
-}
-.zombie-down {
-  background-image: url('images/ZS.png');
-}
+.zombie-left  { background-image: url('images/ZW.png'); }
+.zombie-right { background-image: url('images/ZE.png'); }
+.zombie-up    { background-image: url('images/ZN.png'); }
+.zombie-down  { background-image: url('images/ZS.png'); }
 
-.player1-left {
-  display:inline-block;
-  background-image: url('images/P1W.png');
-  float:left;
-  position: relative;
+.player {
+  position: absolute;
   width: 32px;
   height: 32px;
 }
 
-.player1-right {
-  display:inline-block;
-  background-image: url('images/P1E.png');
-  float:left;
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
+#player1{z-index: 50;}
+#player2{z-index: 51;}
 
-.player1-up {
-  display:inline-block;
-  background-image: url('images/P1N.png');
-  float:left;
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
+.player1-left  { background-image: url('images/P1W.png'); }
+.player1-right { background-image: url('images/P1E.png'); }
+.player1-up    { background-image: url('images/P1N.png'); }
+.player1-down  { background-image: url('images/P1S.png'); }
 
-.player1-down {
-  display:inline-block;
-  background-image: url('images/P1S.png');
-  float:left;
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
-
-.player2-left {
-  display:inline-block;
-  background-image: url('images/P2W.png');
-  float:left;
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
-
-.player2-right {
-  display:inline-block;
-  background-image: url('images/P2E.png');
-  float:left;
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
-
-.player2-up {
-  display:inline-block;
-  background-image: url('images/P2N.png');
-  float:left;
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
-
-.player2-down {
-  display:inline-block;
-  background-image: url('images/P2S.png');
-  float:left;
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
+.player2-left  { background-image: url('images/P2W.png'); }
+.player2-right { background-image: url('images/P2E.png'); }
+.player2-up    { background-image: url('images/P2N.png'); }
+.player2-down  { background-image: url('images/P2S.png'); }
 
 .content {
+  position:relative;
   text-align: center;
 }
 
@@ -166,7 +98,7 @@ button {
   color: black;
   background-color: red;
   border: 2px solid black;
-  font-family: 'VT220';
+  font-family: 'VT220', sans-serif;
 }
 
 button:hover {
@@ -174,18 +106,17 @@ button:hover {
   color:red;
 }
 
-
 option {
-  background-color: red;
-  font-family: 'VT220';
+  background-color: transparent;
+  font-family: 'VT220', sans-serif;
 }
 
 select {
   font-size: 18px;
   background-color: red;
+  border: 2px solid black;
   border-radius: 5px;
-  border: 2px solid red;
-  font-family: 'VT220';
+  font-family: 'VT220', sans-serif;
 }
 
 header {
@@ -204,14 +135,10 @@ header {
   text-shadow: 3px 3px 0px #101010;
 }
 
-
 select button {
   border-radius: 5px;
   border: 2px solid red;
-  font-family: 'VT220';
-  /*font-size: 16px;
-
-  color: red;*/
+  font-family: 'VT220', sans-serif;
 }
 
 #instructions{
@@ -225,7 +152,7 @@ select button {
 #message {
   padding:30px;
   margin: 300px 400px;
-  z-index: 1;
+  z-index: 100;
   width: 30%;
   height: 10%;
   position: absolute;
